--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
   <p> This is a test </p>
   <img src="index.jpg">
 
+  <h2> Activity 1: Juxtapose Image</h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="868" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=d0810d80-6c8f-11eb-83c8-ebb5d6f907df"></iframe>
+
 </body>
 </html>
