--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
   <h2> Activity 1: Juxtapose Image</h2>
   <iframe frameborder="0" class="juxtapose" width="100%" height="868" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=d0810d80-6c8f-11eb-83c8-ebb5d6f907df"></iframe>
 
+  <h2> Activity 2: StoryMap Image </h2>
+  <iframe src="https://uploads.knightlab.com/storymapjs/faf77b532259f862d396942a308b11f1/storymap/index.html" frameborder="0" width="100%" height="800"></iframe>
+
 </body>
 </html>
