--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
   <h2> Activity 2: StoryMap Image </h2>
   <iframe src="https://uploads.knightlab.com/storymapjs/faf77b532259f862d396942a308b11f1/storymap/index.html" frameborder="0" width="100%" height="800"></iframe>
 
+  <h2> Data Visualisation 1 </h2>
+  <iframe title="Tax Collections" aria-label="Interactive line chart" id="datawrapper-chart-4GOZk" src="https://datawrapper.dwcdn.net/4GOZk/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="484"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+</script>
+
 </body>
 </html>
