--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
   <h2> Data Visualisation 1 </h2>
   <iframe title="Tax Collections" aria-label="Interactive line chart" id="datawrapper-chart-4GOZk" src="https://datawrapper.dwcdn.net/4GOZk/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="484"></iframe>
 
+  <h2> Data Visualisation 2 </h2>
+  <iframe title="Billed Tax vs. Collected Tax (in Millions GBP)" aria-label="Interactive line chart" id="datawrapper-chart-ZBiy2" src="https://datawrapper.dwcdn.net/ZBiy2/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="600"></iframe>
+
 </body>
 </html>
