--- a/index.html
+++ b/index.html
@@ -17,17 +17,11 @@
   <p> This is a test </p>
   <img src="index.jpg">
 
-  <h2> Activity 1: Juxtapose Image</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="868" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=d0810d80-6c8f-11eb-83c8-ebb5d6f907df"></iframe>
+  <h2> Alan Turing</h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="311" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=93d34c5c-8ca8-11eb-83c8-ebb5d6f907df"></iframe>
 
-  <h2> Activity 2: StoryMap Image </h2>
-  <iframe src="https://uploads.knightlab.com/storymapjs/faf77b532259f862d396942a308b11f1/storymap/index.html" frameborder="0" width="100%" height="800"></iframe>
-
-  <h2> Data Visualisation 1 </h2>
-  <iframe title="Tax Collections" aria-label="Interactive line chart" id="datawrapper-chart-4GOZk" src="https://datawrapper.dwcdn.net/4GOZk/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="484"></iframe>
-
-  <h2> Data Visualisation 2 </h2>
-  <iframe title="Billed Tax vs. Collected Tax (in Millions GBP)" aria-label="Interactive line chart" id="datawrapper-chart-ZBiy2" src="https://datawrapper.dwcdn.net/ZBiy2/1/" scrolling="no" frameborder="0" style="border: none;" width="600" height="600"></iframe>
-
+  <h2> Joan Clarke</h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="350" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=5fa6bac6-8ca9-11eb-83c8-ebb5d6f907df"></iframe>
+  
 </body>
 </html>
