--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 
   <h2> Joan Clarke</h2>
   <iframe frameborder="0" class="juxtapose" width="100%" height="350" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=5fa6bac6-8ca9-11eb-83c8-ebb5d6f907df"></iframe>
-  
+
+  <h2> Hugh Alexander </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="130" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=a2932ff8-8caa-11eb-83c8-ebb5d6f907df"></iframe>
+
+  <h2> Alastair Denniston</h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="957.9885714285714" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=6ceed702-8cab-11eb-83c8-ebb5d6f907df"></iframe>
+
+  <h2> Stewart Menzies</h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="243.75" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=08edc550-8cac-11eb-83c8-ebb5d6f907df"></iframe>
+
+  <h2> John Cairncross </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="300" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=7c59483e-8cac-11eb-83c8-ebb5d6f907df"></iframe>
+
 </body>
 </html>
