--- a/index.html
+++ b/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html>
+  <head>
+  <style>
+    body {width: 1024px;
+          margin: auto;
+          background-color:#fbedff;}
 
-<body>
+  </style>
+  </head>
+
+  <body>
   <h1 style="color:#5C439D";> Digital Tools and Skills </h1></body>
-<body>
+  <body>
   <hr>
   <h2> Meagan Enciso </h2>
-  <p> This is a test </p>
-  <img src="index.jpg">
 
   <h2> Alan Turing</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="311" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=93d34c5c-8ca8-11eb-83c8-ebb5d6f907df"></iframe>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=93d34c5c-8ca8-11eb-83c8-ebb5d6f907df"></iframe>
 
   <h2> Joan Clarke</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="350" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=5fa6bac6-8ca9-11eb-83c8-ebb5d6f907df"></iframe>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=5fa6bac6-8ca9-11eb-83c8-ebb5d6f907df"></iframe>
 
   <h2> Hugh Alexander </h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="130" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=a2932ff8-8caa-11eb-83c8-ebb5d6f907df"></iframe>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=a2932ff8-8caa-11eb-83c8-ebb5d6f907df"></iframe>
 
   <h2> Alastair Denniston</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="957.9885714285714" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=6ceed702-8cab-11eb-83c8-ebb5d6f907df"></iframe>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=6ceed702-8cab-11eb-83c8-ebb5d6f907df"></iframe>
 
   <h2> Stewart Menzies</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="243.75" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=08edc550-8cac-11eb-83c8-ebb5d6f907df"></iframe>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=08edc550-8cac-11eb-83c8-ebb5d6f907df"></iframe>
 
   <h2> John Cairncross </h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="300" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=7c59483e-8cac-11eb-83c8-ebb5d6f907df"></iframe>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=7c59483e-8cac-11eb-83c8-ebb5d6f907df"></iframe>
 
 </body>
 </html>
