--- a/index.html
+++ b/index.html
@@ -33,5 +33,21 @@
   <h2> John Cairncross </h2>
   <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=7c59483e-8cac-11eb-83c8-ebb5d6f907df"></iframe>
 
+  <hr>
+
+  <h1> The Social Network</h1>
+
+  <h2> Mark Zuckerberg </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="402" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=175df780-8cb2-11eb-83c8-ebb5d6f907df"></iframe>
+
+  <h2> Eduardo Saverin </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="825" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=ddd96cf0-8cb2-11eb-83c8-ebb5d6f907df"></iframe>
+
+  <h2> Sean Parker </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="824" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=167078c4-8cb3-11eb-83c8-ebb5d6f907df"></iframe>
+
+  <h2> Cameron and Tyler Winklevosss <h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="750" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=57ec6b32-8cb3-11eb-83c8-ebb5d6f907df"></iframe>
+
 </body>
 </html>
