--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
   <hr>
   <h2> Meagan Enciso </h2>
 
-  <h2> Alan Turing</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=93d34c5c-8ca8-11eb-83c8-ebb5d6f907df"></iframe>
+  <h1> The Blind Side </h1>
 
-  <h2> Joan Clarke</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=5fa6bac6-8ca9-11eb-83c8-ebb5d6f907df"></iframe>
+  <h2> Michael Oher</h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="370.56694813027747" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=b12ff036-8cba-11eb-83c8-ebb5d6f907df"></iframe>
 
-  <h2> Hugh Alexander </h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=a2932ff8-8caa-11eb-83c8-ebb5d6f907df"></iframe>
+  <h2> Leigh Anne Tuohy </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="288" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=c90dd474-8cbb-11eb-83c8-ebb5d6f907df"></iframe>
 
-  <h2> Alastair Denniston</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=6ceed702-8cab-11eb-83c8-ebb5d6f907df"></iframe>
+  <h2> Sean Tuohy </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="486" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=1f5f654e-8cbd-11eb-83c8-ebb5d6f907df"></iframe>
 
-  <h2> Stewart Menzies</h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=08edc550-8cac-11eb-83c8-ebb5d6f907df"></iframe>
+  <h2> Sean Tuohy Junior (SJ) </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="186" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=daf48192-8cc0-11eb-83c8-ebb5d6f907df"></iframe>
 
-  <h2> John Cairncross </h2>
-  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=7c59483e-8cac-11eb-83c8-ebb5d6f907df"></iframe>
+  <h2> Collins Tuohy </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="1000" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=8b2db22e-8cbf-11eb-83c8-ebb5d6f907df"></iframe>
+
+  <h2> Sue Mitchell (Miss Sue) </h2>
+  <iframe frameborder="0" class="juxtapose" width="100%" height="427.5" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=c55689de-8cc0-11eb-83c8-ebb5d6f907df"></iframe>
 
   <hr>
 
